--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
@@ -346,7 +346,7 @@
 
 
             
-            <!--内容图弹出层开始-->
+            <!--封面图库弹出层开始-->
             <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
                 <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
@@ -396,7 +396,7 @@
                     </el-pagination>
                 </div>
             </el-dialog>
-            <!--内容图库弹出层结束-->
+            <!--封面图库弹出层结束-->
        
 
 
