--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
@@ -93,10 +93,10 @@
         <!------------------创建/编辑报名信息开始------------------>
        <div v-show="showAddorEditPage">
             <div class="cv_content_square">
-                <el-form :model="signupForm" ref="signupForm"  :rules="signupFormRules" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
+                <el-form :model="signupForm" ref="signupForm"  :rules="signupFormRules" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
                     
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item prop="signUpTitle" label="报名名称" style="margin:0;">
                                 <el-input
                                 clearable
@@ -113,7 +113,7 @@
 
                     <div class="sparate_line">关联会议详情</div>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item label="会议类型" prop="signUpMeetingType" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpMeetingType" label="0">定制会议</el-radio>
@@ -123,7 +123,7 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item prop="signUpMeetingId" label="关联会议详情ID" style="margin:0;">
                                 <div v-if="signupForm.signUpMeetingId == ''">
                                     <el-button size="medium" type="primary" icon="el-icon-plus" :disabled="true" @click="addMeeting()">绑定会议</el-button>
@@ -146,7 +146,7 @@
                         </el-col>
                     </el-row>
                     <!-- <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item prop="" label="关联会议名称" style="margin:0;">
                                 <el-input
                                 clearable
@@ -159,7 +159,7 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item prop="signupPlace" label="地点" style="margin:0;">
                                 <el-input
                                 clearable
@@ -172,7 +172,7 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item label="报名截止时间" style="margin:0;">
                                 <el-date-picker
                                     clearable
@@ -192,7 +192,7 @@
 
                     <div class="sparate_line">属性设置</div>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item label="是否使用邀请码" prop="signUpInvitationCode" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpInvitationCode" label="0">使用</el-radio>
@@ -202,7 +202,7 @@
                         </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
-                        <el-col :span="22">
+                        <el-col :span="18">
                             <el-form-item label="是否审核" prop="signUpExamine" style="margin:0;">
                                 <template slot-scope="scope">
                                     <el-radio v-model="signupForm.signUpExamine" label="0">需要审核</el-radio>
@@ -214,7 +214,7 @@
                     <!-- <div class="el-row-h70" style="margin-top:70px" v-for="(item, index) in signupForm.checkinTime"> -->
                     <el-row class="el-row-h40">
                         <el-col :span="10">
-                            <el-form-item label="设置签到日期" label-width="33%" prop="signUpDate">
+                            <el-form-item label="设置签到日期" label-width="36%" prop="signUpDate">
                                 <el-date-picker
                                 v-model="signupForm.signUpDate"
                                 type="date"
@@ -236,10 +236,10 @@
 
 
                     <div class="sparate_line">页面设置</div>
-                    <el-row class="el-row-h70">
+                    <el-row class="el-row-h70" style="margin-top: 70px" >
                         <el-col :span="10">
-                            <el-form-item label="头图图片" label-width="33%" prop="signUpImg" style="margin:0">
-                                <div class="fengmian_show" @click="">
+                            <el-form-item label="头图图片" label-width="36%" prop="signUpImg" style="margin:0">
+                                <div class="fengmian_show" @click="chooseCovertImg">
                                     <img v-if="signupForm.signUpImg" :src="signupForm.signUpImg" class="avatar">
                                     <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                                 </div>
@@ -249,22 +249,104 @@
                             <div style="line-height: 26px; font-size:12px; color:#666;">只支持JPG、PNG格式</div>
                         </el-col>
                     </el-row>
-                    <el-row class="el-row-h70" style="margin-top: 40px">
-                        <el-col :span="22">
-                            <el-form-item label="选择报名属性" style="margin:0;">
-                                <template slot-scope="scope">
-                                    <el-checkbox-group>
-                                    <el-checkbox label="" v-model="signupForm.signUpName">姓名</el-checkbox>
-                                    <el-checkbox label="" v-model="signupForm.signUpMobileCode">手机号+验证码</el-checkbox>
-                                    <el-checkbox label="" v-model="signupForm.signUpPosition">职位</el-checkbox>
-                                    <el-checkbox label="" v-model="signupForm.signUpCompany">公司</el-checkbox>
-                                    <el-checkbox label="" v-model="signupForm.signUpEmail">邮箱</el-checkbox>
-                                    <el-checkbox label="" v-model="signupForm.signUpJson">自定义选项</el-checkbox>
-                                    </el-checkbox-group>
-                                </template>
+                    
+                    <el-row class="el-row-h70" style="margin-top: 70px">
+                        <el-row  style="margin: 0">
+                            <el-form-item label="选择报名属性" label-width="15%" style="margin:0">
                             </el-form-item>
+                        </el-row>
+                        <el-row>
+                            <el-col :span="18">
+                                <el-form-item label="" label-width="10%" style="margin-top: 20px">
+                                    <template slot-scope="scope">
+                                        <el-checkbox v-model="signupForm.signUpName" disabled>姓名</el-checkbox>
+                                        <el-checkbox v-model="signupForm.signUpMobileCode" diabled>手机号+验证码</el-checkbox>
+                                        <el-checkbox v-model="signupForm.signUpPosition">职位</el-checkbox>
+                                        <el-checkbox v-model="signupForm.signUpCompany">公司</el-checkbox>
+                                        <el-checkbox v-model="signupForm.signUpEmail">邮箱</el-checkbox>
+                                    </template>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+                        <el-row>
+                            <el-col :span="18">
+                                <el-form-item label="" label-width="10%" style="margin:0">
+                                    <template slot-scope="scope">
+                                        <el-checkbox v-model="signupForm.selfConfig">自定义选项</el-checkbox>
+                                    </template>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+                    </el-row>
+
+                    <!-- 自定义选项 -->
+                    <el-row v-if="isShowselfConfig" class="el-row-h70" style="margin-top: 70px">
+                        <div v-for="(item,index) in signupForm.signUpJson">
+                            <el-row class="el-row-h70">
+                                <el-col :span="18">
+                                    <el-form-item label="自定义标题" style="margin:0;">
+                                        <el-input
+                                            clearable
+                                            type="text"
+                                            v-model="item.sectionTitle"
+                                            placeholder="您的身份"
+                                            auto-complete="on">
+                                            <template slot="append">最多36字</template>
+                                        </el-input>
+                                    </el-form-item>
+                                </el-col>
+                            </el-row>
+                            <el-row class="el-row-h70">
+                                <el-col :span="18">
+                                    <el-form-item label="最大选项值" style="margin:0;">
+                                        <el-input
+                                            clearable
+                                            type="text"
+                                            placeholder="不填默认为单选"
+                                            v-model="item.limit"
+                                            auto-complete="on">
+                                        </el-input>
+                                    </el-form-item>
+                                </el-col>
+                            </el-row>
+
+                            <div style="margin-top: 50px;" v-for="(item2, index2) in item.itemList"></div>
+                                <el-row class="el-row-h70">
+                                    <el-col :span="18">
+                                        <el-form-item label="选项" style="margin:0;">
+                                            <el-input
+                                                clearable
+                                                type="text"
+                                                placeholder="LP"
+                                                v-model="item2.itemText"
+                                                auto-complete="on">
+                                            </el-input>
+                                        </el-form-item>
+                                    </el-col>
+                                    <el-col :span="1" :offset="1">
+                                        <template>
+                                            <el-radio v-model="item2.ifShow" label="true">显示</el-radio>
+                                            <el-radio v-model="item2.ifShow" label="false">不显示</el-radio>
+                                        </template>
+                                    </el-col>
+                                
+                                </el-row>
+                            </div>
+                        </div>
+
+                    </el-row>
+
+
+                    <el-row class="el-row-h70" style="margin-top: 70px" v-if="signupForm.selfConfig" >
+                        <el-col :span="4" :offset="2">
+                            <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="">自定义选项</el-button>
+                        </el-col>
+                        <el-col :span="4" :offset="2">
+                            <el-button type="primary" plain icon="el-icon-minus" style="width:100%" @click="">自定义选项</el-button>
                         </el-col>
                     </el-row>
+
+                    
 
 
 
@@ -283,6 +365,58 @@
                 </el-row>
             </div>
         </div>
+
+         <!--封面图弹出层开始-->
+         <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
+            <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
+                <el-row class="el-row-h60">
+                    <el-col :span="12">
+                        <el-form-item label="图片名称" style="margin:0;">
+                            <el-input
+                            clearable
+                            type="text"
+                            v-model="searchCoverimgForm.picTitle"
+                            auto-complete="off"></el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoverImg(0)">搜索</el-button>
+                    </el-col>
+                    <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-button type="primary" style="width:100%" @click="backToEdit()">返回</el-button>
+                    </el-col>
+                </el-row>
+            </el-form>
+            <el-table :data="contentImgTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="contentImgTableData" stripe>
+                <!-- <el-table-column
+                    type="selection"
+                    width="55">
+                </el-table-column> -->
+                <el-table-column prop="picUrl" label="封面图预览" width="180">
+                    <template v-if="scope.row.picUrl" slot-scope="scope">
+                        <img style="width:80px;height:60px;" :src="scope.row.picUrl">
+                    </template>
+                </el-table-column>
+                <el-table-column prop="picTitle" label="图片名称" width="250"></el-table-column>
+                <el-table-column prop="picEditorName" label="修改人" width="180"></el-table-column>
+                <el-table-column prop="picModTime" label="最后更新时间"></el-table-column>
+                <el-table-column label="操作" width="100" fixed="right">
+                    <template slot-scope="scope">
+                        <el-button type="text" size="small" @click="addThisCoverImg(scope.row)">添加</el-button>
+                    </template>
+                </el-table-column>
+            </el-table>
+            <div class="cv_page_zone">
+                <el-pagination
+                    @current-change="handleCurrentChange3"
+                    :current-page="pagination3.currPage"
+                    :page-size="pagination3.pageSize"
+                    layout="total, prev, pager, next, jumper"
+                    :total="pagination3.totalCount">
+                </el-pagination>
+            </div>
+        </el-dialog>
+        <!--封面图库弹出层结束-->
         <!----------------- 创建/编辑报名信息结束 ------------------>
 
 
