--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_baseinfo.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_baseinfo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">基本信息</div>
+    <div class="cvpage_title_common">会议基本信息</div>
     <div id="meeting_baseinfo" class="cv_page_content">
         <!------------------列表开始------------------>
         <div v-show="!showChildPage">
