--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/signup_list.html
@@ -58,16 +58,18 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                    <el-table-column prop="signUpTitle" label="报名页面名称" width="220"></el-table-column>
-                    <el-table-column prop="signUpExamine" width="220" label="是否需要审核" >
+                    <el-table-column prop="signUpId" label="ID" width="90"></el-table-column>
+                    <el-table-column prop="signUpTitle" label="报名页面名称" width="120"></el-table-column>
+                    <el-table-column prop="signUpLink" label="报名链接" ></el-table-column>
+                    <el-table-column prop="signUpExamine" width="120" label="是否需要审核" >
                         <template slot-scope="scope">
                             <el-tag v-if="scope.row.signUpExamine == '0'">需要审核</el-tag>
                             <el-tag v-if="scope.row.signUpExamine == '1'">报名即通过</el-tag>
                         </template>
                     </el-table-column>
-                    <el-table-column prop="signUpModTime" label="更新时间"width="220" ></el-table-column>
-                    <el-table-column prop="modUserName" label="更新人" width="130"></el-table-column>
-                    <el-table-column label="操作" fixed="right">
+                    <el-table-column prop="signUpModTime" label="更新时间"width="120" ></el-table-column>
+                    <el-table-column prop="modUserName" label="更新人" width="120"></el-table-column>
+                    <el-table-column label="操作" width="220" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="addOrEditSignup(1,scope.row)">编辑</el-button>
                             <el-button type="text" size="small" @click="deleteThisSignup(scope.row)">删除</el-button>
@@ -89,7 +91,10 @@
         </div>
         <!------------------列表结束------------------>
 
-        <!------------------创建/编辑报名信息开始------------------>
+
+
+
+        <!------------------创建/编辑报名信息开始---------------------------->
        <div v-show="showAddorEditPage">
             <div class="cv_content_square">
                 <el-form :model="signupForm" ref="signupForm"  :rules="signupFormRules" status-icon class="demo-ruleForm" label-width="20%" label-position="right">
@@ -383,20 +388,18 @@
                                             </el-col>
                                             <el-col :span="5" :offset="1">
                                                 <template>
-                                                    <el-radio v-model="item2.ifShow" label="false">不显示</el-radio>
-                                                    <el-radio v-model="item2.ifShow" label="true">显示</el-radio>
+                                                    <el-radio v-model="item2.ifShow" :label = false>不显示</el-radio>
+                                                    <el-radio v-model="item2.ifShow" :label = true>显示</el-radio>
                                                 </template>
                                             </el-col>
                                         </el-row>
                                     </div>
                                 </div>
-                            
-                            
                             <el-row class="el-row-h70">
                                 <el-col :span="1" :offset="4" style="margin-top: 0px">
                                     <el-button size="medium" type="primary" icon="el-icon-plus" @click="addSpecialOptions(index)" circle ></el-button>
                                 </el-col>
-                                <el-col :span="1"  :offset="1" style="margin-top: 0px">
+                                <el-col :span="1" :offset="1" style="margin-top: 0px">
                                     <el-button size="medium" :disabled="isDelSpecialBtn" type="plain" icon="el-icon-minus" @click="delSpecialOptions(index)" circle ></el-button>
                                 </el-col>
                             </el-row>
@@ -411,7 +414,7 @@
                                 <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addSelfOptions()">自定义选项</el-button>
                             </el-col>
                         </div>
-                        <div v-if="signupForm.signUpJson.length !== 1">
+                        <div v-if="isShowMinus">
                             <el-col :span="4" :offset="2">
                                 <el-button type="primary" :disabled ="isDelBtn" plain icon="el-icon-minus" style="width:100%" @click="delSelfOptions()">自定义选项</el-button>
                             </el-col>
@@ -428,10 +431,9 @@
                 </el-row>
             </div>
         </div>
-
-
-        <!-------------------- 会议详情列表弹出层 ------------------>
-        <el-dialog title="通用会议列表" :visible.sync="showCommonMeetingList" width="100%" :fullscreen="true" :show-close="false" >
+        
+        <!----------------- 1.会议列表弹出层开始 ---------------->
+        <el-dialog title="会议列表" :visible.sync="showCommonMeetingList" width="100%" :fullscreen="true" :show-close="false" >
             <el-form :model="searchMeetingForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                 <el-row class="el-row-h60">
                     <el-col :span="8">
@@ -502,12 +504,10 @@
                 </el-pagination>
             </div>
         </el-dialog>
-        <!---------------------- 通用会议列表弹出层结束 --------------->
+        <!------------------- 会议列表弹出层结束 --------------->
 
-        
-
-         <!--封面图弹出层开始-->
-         <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
+        <!----------------2.封面图弹出层开始------------------->
+        <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
             <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                 <el-row class="el-row-h60">
                     <el-col :span="12">
@@ -556,8 +556,9 @@
                 </el-pagination>
             </div> -->
         </el-dialog>
-        <!--封面图库弹出层结束-->
-        <!----------------- 创建/编辑报名信息结束 ------------------>
+        <!----------------封面图库弹出层结束-------------------->
+
+        <!----------------- 创建/编辑报名信息结束 --------------------------->
 
 
 
@@ -608,18 +609,18 @@
                     <el-table-column prop="signUpInfoMobile" label="手机号" width="110"></el-table-column>
                     <el-table-column prop="signUpInfoInvitationCode" label="邀请码" width="110"></el-table-column>
                     <el-table-column prop="signUpInfoEmail" label="邮箱" width="200"></el-table-column>
-                    <el-table-column prop="signUpInfoStatus" width="140" label="是否需要审核" >
+                    <el-table-column prop="signUpInfoStatus" width="140" label="审核状态" >
                         <template slot-scope="scope">
-                            <el-tag v-if="scope.row.checkStatus == '0'">待审核</el-tag>
-                            <el-tag v-if="scope.row.checkStatus == '1'">审核通过</el-tag>
+                            <el-tag v-if="scope.row.signUpInfoStatus == '0'">待审核</el-tag>
+                            <el-tag v-if="scope.row.signUpInfoStatus == '1'">审核通过</el-tag>
                         </template>
                     </el-table-column>
                     <el-table-column label="操作" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="editsignupInfo(scope.row)">编辑</el-button>
-                            <span prop="signupStatus">
-                                <el-button v-if="scope.row.signupStatus == '0'" type="text" size="small" @click="changeSignupStatus(scope.row)">报名通过</el-button>
-                                <el-button v-if="scope.row.signupStatus == '1'" type="text" size="small" @click="changeSignupStatus(scope.row)">取消报名</el-button>
+                            <span prop="signUpInfoStatus" v-if="isToExamine == '0'">
+                                <el-button v-if="scope.row.signUpInfoStatus == '0'" type="text" size="small" @click="changeSignupStatus(scope.row)">报名通过</el-button>
+                                <el-button v-if="scope.row.signUpInfoStatus == '1'" type="text" size="small" @click="changeSignupStatus(scope.row)">取消报名</el-button>
                             </span>
                         </template>
                     </el-table-column>
